--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "magento/module-review-sample-data": "100.1.*",
         "magento/module-swatches-sample-data": "100.1.*",
         "magento/sample-data-media": "100.1.*",
-        "magento/module-offline-shipping-sample-data": "100.1.*",
-        "mageplaza/module-smtp": "^1.0"
+        "magento/module-offline-shipping-sample-data": "100.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.0",
